--- a/.github/workflows/mirror-to-gitlab.yml
+++ b/.github/workflows/mirror-to-gitlab.yml
@@ -1,8 +1,8 @@
 name: Mirror to GitLab
 
 on:
-  push:       
-    branches: ["*"]
+  push:
+    branches: ["*"]  # jeder Push auf jedem Branch
 
 jobs:
   mirror:
@@ -13,13 +13,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          lfs: true
-
-      - name: Install Git LFS
-        run: |
-          sudo apt update
-          sudo apt install -y git-lfs
-          git lfs install
 
       - name: Configure Git identity
         run: |
@@ -33,4 +26,3 @@ jobs:
           git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.erik-skopp.de/chess/SimpleDWZ.git
           git push gitlab --all
           git push gitlab --tags
-          git lfs push gitlab --all
