--- a/.github/workflows/mirror-to-gitlab.yml
+++ b/.github/workflows/mirror-to-gitlab.yml
@@ -2,7 +2,7 @@ name: Mirror to GitLab
 
 on:
   push:
-    branches: ["*"]  # jeder Push auf jedem Branch
+    branches: ["*"]  
 
 jobs:
   mirror:
